# lish-backend

./: LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
src/: Cargo.toml
src/app/: Cargo.toml
src/app/src/: main.rs
src/core/: Cargo.toml
src/domain/: Cargo.toml
src/infrastructure/grpc/: Cargo.toml
src/infrastructure/mq/: Cargo.toml
src/usecase/: Cargo.toml
