[package]
name = "lish-backend-usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lish-domain = { path = "../domain" }
lish-backend-core = { path = "../core" }
lish-backend-grpc = { path = "../infrastructure/grpc" }
lish-backend-mq = { path = "../infrastructure/mq" }
